--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <meta name='author' content=': '>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.6.3/css/all.css' integrity='sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/' crossorigin='anonymous'/>
-<link rel='stylesheet' href='assets/css/codeinstitutemilestone2.css'>
-<script src='assets/js/codeinstitutemilestone2.js'></script>
-<title>Code Institute Milestone 2</title>
+<link rel='stylesheet' href='assets/css/uavflightplanner.css'>
+<script src='assets/js/uavflightplanner.js'></script>
+<title>UAV Flight Planner</title>
 </head>
 <body onload="showMenuComponent('HomePage');document.getElementById('navbarNavDropdown').className='navbar-collapse collapse';" onhashchange='showMenuComponent(location.hash.substring(1,location.hash.length-4));'>
 <div id='imgbground' class='bground Home-display Gallery-display'></div>
@@ -48,6 +48,6 @@
 <p>Registered Charity No. 1167079</p>
 <p class='enquiry'>For Enquiries Please Email: Null</p>
 <p class='d-none d-lg-inline footer-sm'>Created by   on behalf of  
-||&nbsp;Last update on 02/03/2021||&nbsp;<span id='HTMLSerNo'>0007</span>.<span id='CSSSerNo'></span><span id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 04/03/2021||&nbsp;<span id='HTMLSerNo'>0007</span>.<span id='CSSSerNo'></span><span id='JSSerNo'></span></p></footer>
 </body>
 </html>
