--- a/projectdocuments/poccode/PostCodeLookup.html
+++ b/projectdocuments/poccode/PostCodeLookup.html
@@ -26,5 +26,10 @@ function getData(type, cb) {
     <body>
         <button onclick="getData('latitude');">Postcode</button>
         <div id="data"></div>
+<div id="attribution">
+<p>Contains OS data © Crown copyright and database right 2021</p>
+<p>Contains Royal Mail data © Royal Mail copyright and database right 2021</p>
+<p>Source: Office for National Statistics licensed under the Open Government Licence v.3.0</p>
+</div>
     </body>
 </html>
