--- a/projectdocuments/poccode/PostCodeLookup.html
+++ b/projectdocuments/poccode/PostCodeLookup.html
@@ -3,7 +3,7 @@
         <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='' crossorigin='anonymous'></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script>
-           const baseURL = "http://api.getthedata.com/postcode/CV313pe";
+           const baseURL = "https://api.getthedata.com/postcode/CV313pe";
 
 function getData(type, cb) {
     var xhr = new XMLHttpRequest();
