--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang=''>
 <head>
-<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
-<meta name='viewport' content='width=device-width initial-scale=1.0'>
+<meta http-equiv='Content-Type' content='text/html; charset='UTF-8'>
+<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+<meta http-equiv='X-UA-Compatible' content='ie=edge'>
 <link rel='icon' href='assets/images/favicon.ico'>
 <meta name='description' content='Code Institute Milestone 2'>
 <meta name='keywords' content=''>
 <meta name='author' content=': '>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.6.3/css/all.css' integrity='sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/' crossorigin='anonymous'/>
 <link rel='stylesheet' href='assets/css/uavflightplanner.css'>
 <script src='assets/js/uavflightplanner.js'></script>
 <title>UAV Flight Planner</title>
@@ -18,7 +18,10 @@
 <div id='imgbground-blur' class='bground-blur'></div>
 <!-- Start of Nav -->
 <nav >
-</nav>
+<div class='logoleft'>
+<img class='logoleft' src='assets/images/logo.png' alt='Navigation Logo'>
+</div>
+<a href='#Home-Top' </nav>
 <!-- End of Nav -->
 
 <!--  Start of HomePage menu section-->
@@ -48,6 +51,6 @@
 <p>Registered Charity No. 1167079</p>
 <p class='enquiry'>For Enquiries Please Email: Null</p>
 <p class='d-none d-lg-inline footer-sm'>Created by   on behalf of  
-||&nbsp;Last update on 04/03/2021||&nbsp;<span id='HTMLSerNo'>0007</span>.<span id='CSSSerNo'></span><span id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 16/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0007</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
