--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=''>
+<html lang='en-GB'>
 <head>
 <meta http-equiv='Content-Type' content='text/html; charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -7,7 +7,7 @@
 <link rel='icon' href='assets/images/favicon.ico'>
 <meta name='description' content='Code Institute Milestone 2'>
 <meta name='keywords' content=''>
-<meta name='author' content=': '>
+<meta name='author' content='Stephen Clarke: The Code Institute'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <link rel='stylesheet' href='assets/css/uavflightplanner.css'>
 <script src='assets/js/uavflightplanner.js'></script>
@@ -50,7 +50,7 @@
 </ul>
 <p>Registered Charity No. 1167079</p>
 <p class='enquiry'>For Enquiries Please Email: Null</p>
-<p class='d-none d-lg-inline footer-sm'>Created by   on behalf of  
+<p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
 ||&nbsp;Last update on 16/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0007</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
