--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta name='author' content='Stephen Clarke: The Code Institute'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 <link rel='stylesheet' href='assets/css/uavflightplanner.css'>
 <script src='assets/js/uavflightplanner.js'></script>
 <title>UAV Flight Planner</title>
@@ -18,31 +19,31 @@
 <div id='imgbground' class='bground Home-display Gallery-display'></div>
 <div id='imgbground-blur' class='bground-blur'></div>
 <!-- Start of Nav SME-->
-<nav >
+<nav class="navbar navbar-dark navbar-expand-md">
 <div class='logoleft'>
 <img class='logoleft' src='assets/images/logo.png' alt='Navigation Logo'>
 </div>
-<a href='#Home-Top' >
+<a href='#Home-Top' class="navbar-brand">
 UAV Flight Planner
 </a>
 <div class='row no-gutters'>
 <div class='col'>
-<ul id='nav' class='list-inline menucontainer row'>
-<li class='col-6 col-sm-3 list-inline-item menuitem'>
+<ul id='nav' class='navbar-nav mr-auto'>
+<li class='nav-item mr-2'>
  <a class='hvr-sweep-to-bottom' onclick="showMenuComponent('HomePage')">
 <span>
 Home Page
 </span>
 </a>
 </li>
-<li class='col-6 col-sm-3 list-inline-item menuitem'>
+<li class='nav-item mr-2'>
  <a class='hvr-sweep-to-bottom' onclick="showMenuComponent('Location')">
 <span>
 Location
 </span>
 </a>
 </li>
-<li class='col-6 col-sm-3 list-inline-item menuitem'>
+<li class='nav-item mr-2'>
  <a class='hvr-sweep-to-bottom' onclick="showMenuComponent('FlightParameters')">
 <span>
 Flight Parameters
@@ -105,6 +106,6 @@ Location
 <p>Registered Charity No. 1167079</p>
 <p class='enquiry'>For Enquiries Please Email: Null</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 23/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0014</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 27/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0015</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
