Header and Footer Ready
Header and footer ready for next stage of development.

Placeholders in for each page.

Background image in place.

Next step to build out home page

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@ UAV Flight Planner
 <div class='col'>
 <ul id='nav' class='navbar-nav mr-auto'>
 <li class='nav-item mr-2'>
- <a class='hvr-sweep-to-bottom' onclick="showMenuComponent('HomePage')">
-<span>
+ <a id='HomePageButton' class='hvr-sweep-to-bottom' onclick="showMenuComponent('HomePage')">
+<span id='HomePageSpan' class='menu_span'>
 Home Page
 </span>
 </a>
 </li>
 <li class='nav-item mr-2'>
- <a class='hvr-sweep-to-bottom' onclick="showMenuComponent('Location')">
-<span>
+ <a id='LocationButton' class='hvr-sweep-to-bottom' onclick="showMenuComponent('Location')">
+<span id='LocationSpan' class='menu_span'>
 Location
 </span>
 </a>
 </li>
 <li class='nav-item mr-2'>
- <a class='hvr-sweep-to-bottom' onclick="showMenuComponent('FlightParameters')">
-<span>
+ <a id='FlightParametersButton' class='hvr-sweep-to-bottom' onclick="showMenuComponent('FlightParameters')">
+<span id='FlightParametersSpan' class='menu_span'>
 Flight Parameters
 </span>
 </a>
@@ -103,8 +103,7 @@ Location
 <li><a href="http://www.youtube.com" target="_blank"  aria-label="YouTube"><i class="fab fa-youtube-square"></i></a></li>
 <li><a href="http://www.instagram.com" target="_blank"  aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
 </ul>
-<p>Registered Charity No. 1167079</p>
-<p class='enquiry'>For Enquiries Please Email: Null</p>
+<p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
 ||&nbsp;Last update on 27/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0015</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
