--- a/index.html
+++ b/index.html
@@ -59,15 +59,25 @@ Flight Parameters
 <!--  Start of HomePage menu section-->
 <div style='display: none;' class='MenuComponent' id='HomePage'>
 <a id='HomePage-Top'></a>
-<header>
-<h1 class='MenuSectionTitle'>Home</h1>
-<h2 class='Strapline'>Welcome</h2>
-</header>
 <section id='pln-welcome' class='pln-cta'>
-<p>Do this</p>
-    <p>test this file again</p>
-<div>
-    <p>and this</p>
+
+ <div class='row'>
+   <div id='pln-cta' class='col-8'>
+     <p>Drones, UAVs (unmanned aerial vehicles) and traditional model aircraft are all becoming increasingly popular - this site will help you to plan safe and enjoyable flights.</p>
+     <div class="row">
+      <div id="pln-cta-primary" class='btn btn-primary col-8'>Get Started</div>
+    </div>
+   </div>
+ </div>
+<div class="pln-notice-container col-8">
+    <div class="row">
+        <div class="col-2 pln-notice-header">
+            <p>Remember</p>
+        </div>
+        <div class="col-10 pln-notice">
+            <p>It is the pilot's responsibility to ensure that all flights are safe and legal.  If in doubt do not fly.</p>
+        </div>
+    </div>
 </div>
 </section>
 </div>
@@ -105,6 +115,6 @@ Location
 </ul>
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 27/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0015</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 27/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0041</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
