Location Details and OS Map Placeholders
Placeholders in place for location details and OS Map.  The map displays but does not link to the location details as yet.

Also uploaded a Google Street View POC file.

--- a/projectdocuments/poccode/AltitudeAngelAPI.html
+++ b/projectdocuments/poccode/AltitudeAngelAPI.html
@@ -12,7 +12,8 @@
                 "baseUrl": "https://dronesafetymap.com",
                 "postCode": "CV31 3PE",
                 "authDetails": {
-                    "apiKey": "fQWxiLdadwrolw8O3W8EJIDxgWeDkHNuwMc5mYL60"
+"apiKey": "fQWxiLdadwrolw8O3W8EJIDxgWeDkHNuwMc5mYL60"
+                /*    "apiKey": "fQWxiLdadwrolw8O3W8EJIDxgWeDkHNuwMc5mYL60"*/
                 }
             });
         });
