--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+<script src='https://dronesafetymap.com/client/altitudeAngelMap.js'></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AqXZ0hvITdpn5g-2a8bbicLdCTTJgoQHACH441QxLNJDdc_Qlpl6-3BHR0_lGQpJ' async defer></script>
 <link rel='stylesheet' href='assets/css/uavflightplanner.css'>
 <script src='assets/js/uavflightplanner.js'></script>
 <title>UAV Flight Planner</title>
@@ -87,11 +90,38 @@ Flight Parameters
 <!--  Start of Location menu section-->
 <div style='display: none;' class='MenuComponent' id='Location'>
 <a id='Location-Top'></a>
-<header>
-<h1 class='MenuSectionTitle'>Flight Location</h1>
-</header>
 <section>
-Location
+<div class="row">
+ <div id="pln-geo" class="col-2">
+    <h1 class="pln-h1">Location Details</h1>
+
+    <!-- Following form dervied from Bootstrap https://getbootstrap.com/docs/4.1/components/forms/ !-->
+    <form>
+      <div class="form-group">
+        <label for="plnPostcode">Postcode</label>
+        <input type="text" class="form-control" id="plnPostcode" aria-describedby="UK Postcode" placeholder="Enter postcode">
+      </div>
+      <div class="form-group">
+        <label for="plnLatitude">Latitude</label>
+        <input type="number" class="form-control" id="plnLatitude" placeholder="Decimal Latitude">
+        <label for="plnLongitude">Longitude</label>
+        <input type="number" class="form-control" id="plnLongitude" placeholder="Decimal Longitdue">
+        <small id="latlongHelp" class="form-text text-muted">You may wish to further localise the latitude and longitude</small>
+      </div>
+      <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <div class="btn btn-primary" onclick="aaMapShow()">Submit</div>
+    </form>
+ </div>
+ <div id="pln-osmap" class="col-5">
+   <p>OS Map</p>
+ </div>
+ <div  id="pln-streetview" class="col-5">
+   <p>Street View</p>
+ </div>
+</div>
 </section>
 </div>
 <!--  End of Location menu section-->
@@ -100,9 +130,19 @@ Location
 <!--  Start of FlightParameters menu section-->
 <div style='display: none;' class='MenuComponent' id='FlightParameters'>
 <a id='FlightParameters-Top'></a>
-<header>
-<h1 class='MenuSectionTitle'>Parameters</h1>
-</header>
+<section>
+<div class="row">
+ <div id="pln-comp" class="col-2">
+  <p>Competencies</p>
+ </div>
+ <div id="pln-flightcat" class="col-4">
+  <p>Flight Categories</p>
+ </div>
+ <div id="pln-dronecat" class="col-4">
+  <p>Drone Categories</p>
+ </div>
+</div>
+</section>
 </div>
 <!--  End of FlightParameters menu section-->
 
@@ -115,6 +155,6 @@ Location
 </ul>
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 27/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0041</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 28/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0059</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
