Location Maps in Place
The two location maps are in place, using the Bing and Google Maps APIs.  Neither yet take locations from the interface.

The drone safety map button will be added next.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src='https://dronesafetymap.com/client/altitudeAngelMap.js'></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AqXZ0hvITdpn5g-2a8bbicLdCTTJgoQHACH441QxLNJDdc_Qlpl6-3BHR0_lGQpJ' async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWmo-Ndb3YTzwMWSHAzg8an9dM9WDOlMk&callback=initialize&libraries=&v=weekly" async></script>
 <link rel='stylesheet' href='assets/css/uavflightplanner.css'>
 <script src='assets/js/uavflightplanner.js'></script>
 <title>UAV Flight Planner</title>
@@ -118,8 +119,8 @@ Flight Parameters
  <div id="pln-osmap" class="col-5">
    <p>OS Map</p>
  </div>
- <div  id="pln-streetview" class="col-5">
-   <p>Street View</p>
+ <div  id="pln-satview" class="col-5">
+   <p>Satellite View</p>
  </div>
 </div>
 </section>
@@ -155,6 +156,6 @@ Flight Parameters
 </ul>
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 28/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0059</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 28/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0061</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
