Bing, Google and Altitude Angel Working
Bing Maps, for OS, Google for Satellite and Street View and Altitude Angel option as an overlay all working.

Next step to take co-ordinates from form

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@ Flight Parameters
    <p>Satellite View</p>
  </div>
 </div>
+<div class="row">
+ <div class="btn btn-primary" onclick="droneSafetyMap(51.477976,0.000001);">Drone Safety Map</div>
+</div>
 </section>
 </div>
 <!--  End of Location menu section-->
@@ -156,6 +159,6 @@ Flight Parameters
 </ul>
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 28/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0061</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 28/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0065</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
