--- a/index.html
+++ b/index.html
@@ -99,22 +99,24 @@ Flight Parameters
     <!-- Following form dervied from Bootstrap https://getbootstrap.com/docs/4.1/components/forms/ !-->
     <form>
       <div class="form-group">
-        <label for="plnPostcode">Postcode</label>
-        <input type="text" class="form-control" id="plnPostcode" aria-describedby="UK Postcode" placeholder="Enter postcode">
+        <label for="pln-Postcode">Postcode</label>
+        <input type="text" class="form-control" id="pln-Postcode" aria-describedby="UK Postcode" placeholder="Enter postcode">
       </div>
       <div class="form-group">
-        <label for="plnLatitude">Latitude</label>
-        <input type="number" class="form-control" id="plnLatitude" name="plnLat" placeholder="Decimal Latitude">
-        <label for="plnLongitude">Longitude</label>
-        <input type="number" class="form-control" id="plnLongitude" name="plnLong" placeholder="Decimal Longitdue">
+        <label for="pln-Latitude">Latitude</label>
+        <input type="number" class="form-control" id="pln-Latitude" name="plnLat" placeholder="Decimal Latitude">
+        <label for="pln-Longitude">Longitude</label>
+        <input type="number" class="form-control" id="pln-Longitude" name="plnLong" placeholder="Decimal Longitdue">
         <small id="latlongHelp" class="form-text text-muted">You may wish to further localise the latitude and longitude</small>
       </div>
-      <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
-      <div class="btn btn-primary" onclick="recentreMaps()">Re-Centre Maps</div>
+      
+      <div class="btn btn-primary" id="pln-Recenter">Re-Centre Maps</div>
     </form>
+<div class="pln-Attribution">
+        <p>Contains OS data © Crown copyright and database right 2021</p>
+        <p>Contains Royal Mail data © Royal Mail copyright and database right 2021</p>
+        <p>Source: Office for National Statistics licensed under the Open Government Licence v.3.0</p>
+      </div>
  </div>
  <div id="pln-osmap" class="col-5">
    <p>OS Map</p>
@@ -198,6 +200,6 @@ Flight Parameters
 </ul>
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 29/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0071</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 30/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0074</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
