--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@ Flight Parameters
 
 <!-- Evaluate the competencies of the remote pilot all can be selected -->
  <div id="pln-competencies" class="col-4">
-  <h1 class="pln-params">Competencies</h1>
+  <h1 class="pln-params-h1">Competencies</h1>
   <p class="pln-params-p">Select below all the certifications and competencies that you have completed.</p>
 
     <!-- Read the Manual -->
     <div id="pln-rtm" class="pln-comp">
-      <div>
+      <div class="pln-comp-head">
         <label class="pln-comp-lbl" for="pln-comp-rtm-chk">
         Read the Manual
         </label>
@@ -159,7 +159,7 @@ Flight Parameters
 
     <!-- Operator ID-->
     <div id="pln-opid" class="pln-comp">
-      <div>
+      <div class="pln-comp-head">
         <label class="pln-comp-lbl" for="pln-comp-opid-chk">
          <p>Operator ID</p>
         </label>
@@ -172,7 +172,7 @@ Flight Parameters
 
     <!-- Flyer ID-->
     <div id="pln-flyid" class="pln-comp">
-      <div>
+      <div  class="pln-comp-head">
         <label class="pln-comp-lbl" for="pln-comp-flyid-chk">
          <p>Flyer ID</p>
         </label>
@@ -185,7 +185,7 @@ Flight Parameters
 
     <!-- A2 Certificate of Competency-->
     <div id="pln-a2coc" class="pln-comp">
-      <div>
+      <div  class="pln-comp-head">
         <label class="pln-comp-lbl" for="pln-comp-a2coc-chk">
          <p>A2 CoC</p>
         </label>
@@ -198,9 +198,9 @@ Flight Parameters
 
     <!-- GVC-->
     <div id="pln-gvc" class="pln-comp">
-      <div>
+      <div class="pln-comp-head">
         <label class="pln-comp-lbl" for="pln-comp-gvc-chk">
-         <p>Flyer ID</p>
+         <p>GVC</p>
         </label>
         <input type="checkbox" id="pln-comp-gvc-chk">
       </div>
@@ -215,13 +215,15 @@ Flight Parameters
 
 <!-- Choose the Category of Drone, only one can be selected -->
  <div id="pln-dronecategories" class="col-4">
- <h1 class="pln-params">Drone Categories</h1>
+ <h1 class="pln-params-h1">Drone Categories</h1>
   <p class="pln-params-p">Select below the category for the drone you intend to fly.  Refer to the CAA if not sure.</p>
     <div class="pln-dronecat">
-      <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c01" value="option1">
-      <label for="pln-dronecat-radio-c01">
-        <p>C0 - Toy or no camera</p>
-      </label>
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c01" value="option1">
+        <label for="pln-dronecat-radio-c01">
+          <p>C0 - Toy or no camera</p>
+        </label>
+      </div>
       <div class="pln-dronecat-desc">
         <p>A drone weighing 250g or less, that is either clearly a toy or has no camera or other data recording device.</p>
       </div>
@@ -229,35 +231,176 @@ Flight Parameters
 
     <!-- C0 with camera-->
     <div class="pln-dronecat">
-      <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c02" value="option2">
-      <label for="pln-dronecat-radio-c02">
-        <p>C0 - Camera</p>
-      </label>
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c02" value="option2">
+        <label for="pln-dronecat-radio-c02">
+          <p>C0 - Camera</p>
+        </label>
+      </div>
       <div class="pln-dronecat-desc">
         <p>A drone weighing 250g or less, that has a camera or other data recording device.</p>
       </div>
     </div>
 
-
     <!-- C1 certified-->
     <div class="pln-dronecat">
-      <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c1" value="option3">
-      <label for="pln-dronecat-radio-c1">
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c1" value="option3">
+        <label for="pln-dronecat-radio-c1">
         <p>C1 - Certified</p>
-      </label>
+        </label>
+      </div>
       <div class="pln-dronecat-desc">
         <p>A drone that has been certified by the manufacturer as C1.</p>
       </div>
     </div>
 
+    <!-- A1 transition-->
+    <div class="pln-dronecat">
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
+        <label for="pln-dronecat-radio-a1t">
+          <p>A1 - Transition</p>
+        </label>
+      </div>
+      <div class="pln-dronecat-desc">
+        <p>A drone that weighs below 500g.</p>
+      </div>
+    </div>
+
+    <!-- C2 Certified Low Speed-->
+    <div class="pln-dronecat">
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
+        <label for="pln-dronecat-radio-a1t">
+          <p>C2 - Low Speed</p>
+        </label>
+      </div>
+      <div class="pln-dronecat-desc">
+        <p>A drone that is C2 certified, operating in low speed mode.</p>
+      </div>
+    </div>
+
+    <!-- C2 Certified -->
+    <div class="pln-dronecat">
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
+        <label for="pln-dronecat-radio-a1t">
+          <p>C2 - Low Speed</p>
+        </label>
+      </div>
+      <div class="pln-dronecat-desc">
+        <p>A drone that is C2 certified, operating in low speed mode.</p>
+      </div>
+    </div>
+
+    <!-- C2 Certified -->
+    <div class="pln-dronecat">
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
+        <label for="pln-dronecat-radio-a1t">
+          <p>C2</p>
+        </label>
+      </div>
+      <div class="pln-dronecat-desc">
+        <p>A drone that is C2 certified.</p>
+      </div>
+    </div>
+
+    <!-- A2 Transition -->
+    <div class="pln-dronecat">
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
+        <label for="pln-dronecat-radio-a1t">
+          <p>A2 - Transition</p>
+        </label>
+      </div>
+      <div class="pln-dronecat-desc">
+        <p>A drone that is below 2kg.</p>
+      </div>
+    </div>
+
+    <!-- C3 -->
+    <div class="pln-dronecat">
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
+        <label for="pln-dronecat-radio-a1t">
+          <p>C3</p>
+        </label>
+      </div>
+      <div class="pln-dronecat-desc">
+        <p>A drone that is C2 certified, operating in low speed mode.</p>
+      </div>
+    </div>
+
+    <!-- C4 -->
+    <div class="pln-dronecat">
+      <div class="pln-dronecat-head">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
+        <label for="pln-dronecat-radio-a1t">
+          <p>C4</p>
+        </label>
+      </div>
+      <div class="pln-dronecat-desc">
+        <p>A drone that is C2 certified, operating in low speed mode.</p>
+      </div>
+    </div>
   </div>
  <!-- End of Drone Categories-->
 <!-- List the flight categories, mark those available with the drone and pilot competency combination -->
- <div id="pln-flightcat" class="col-4">
-   <h1 class="pln-params">Flight Categories</h1>
-  <p class="pln-params-p">Below are descriptions of the flight categories that you can undertake with the combination of drone and competencies that you have indicated.</p>
- </div>
-</div>
+ <div id="pln-flightcategories" class="col-4">
+   <h1 class="pln-params-h1">Flight Categories</h1>
+    <p class="pln-params-p">Below are descriptions of the flight categories that you can undertake with the combination of drone and competencies that you have indicated.</p>
+    
+    <!-- A1 Fly Over Stay Over -->
+    <div class="pln-flightcat">
+      <p>A1 Fly Over - Stay Over</p>
+      <div class="pln-flightcat-desc">
+        <p>No miniumum separation from uninvolved people, potentially flying over, and staying over uninvolved people.</p>
+      </div>
+    </div>
+
+    <!-- A1 Fly Over Pass Over -->
+    <div class="pln-flightcat">
+      <p>A1 Fly Over - Pass Over</p>
+      <div class="pln-flightcat-desc">
+        <p>No miniumum separation from uninvolved people, potentially flying over, but only passing briefly over uninvolved people.</p>
+      </div>
+    </div>
+
+    <!-- A2 Close to People - 5m -->
+    <div class="pln-flightcat">
+      <p>A2 Close to People - 5m</p>
+      <div class="pln-flightcat-desc">
+        <p>Minimum separation of 5m from uninvolved people.</p>
+      </div>
+    </div>
+
+    <!-- A2 Close to People - 30m -->
+    <div class="pln-flightcat">
+      <p>A2 Close to People - 5m</p>
+      <div class="pln-flightcat-desc">
+        <p>Minimum separation of 30m from uninvolved people.</p>
+      </div>
+    </div>
+
+    <!-- A2 Close to People - 50m -->
+    <div class="pln-flightcat">
+      <p>A2 Close to People - 5m</p>
+      <div class="pln-flightcat-desc">
+        <p>Minimum separation of 50m from uninvolved people.</p>
+      </div>
+    </div>
+
+    <!-- A3 Far from People - 50m -->
+    <div class="pln-flightcat">
+      <p>A2 Close to People - 5m</p>
+      <div class="pln-flightcat-desc">
+        <p>Minimum separation of 50m from uninvolved people, must remain over 150m from congested areas.</p>
+      </div>
+    </div>
+    
+  </div>
 </section>
 </div>
 <!--  End of FlightParameters menu section-->
@@ -271,6 +414,6 @@ Flight Parameters
 </ul>
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 30/04/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0085</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 01/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0095</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
