Flight Parameters Business Rule Format
Business rules for the flight parameters are working for the first two rules.  Next step is to extend and complete the rules.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Flight Parameters
         <label class="pln-comp-lbl" for="pln-comp-rtm-chk">
         Read the Manual
         </label>
-        <input type="checkbox" id="pln-comp-rtm-chk">
+        <input type="checkbox" id="pln-comp-rtm-chk" class="pln-param-input">
       </div>
       <div class="pln-comp-desc">
         <p>Ensure that you have read the manual so that you are familiar with the drone, its specifications, its capabilities and its limitations.</p>
@@ -163,7 +163,7 @@ Flight Parameters
         <label class="pln-comp-lbl" for="pln-comp-opid-chk">
          <p>Operator ID</p>
         </label>
-        <input type="checkbox" id="pln-comp-opid-chk">
+        <input type="checkbox" id="pln-comp-opid-chk" class="pln-param-input">
       </div>
       <div  class="pln-comp-desc">
         <p>Ensure that you have obtained an operator ID from the Civil Aviation Authority.</p>
@@ -176,7 +176,7 @@ Flight Parameters
         <label class="pln-comp-lbl" for="pln-comp-flyid-chk">
          <p>Flyer ID</p>
         </label>
-        <input type="checkbox" id="pln-comp-flyid-chk">
+        <input type="checkbox" id="pln-comp-flyid-chk" class="pln-param-input">
       </div>
       <div  class="pln-comp-desc">
         <p>Ensure that you have taken the online test and obtained a Flyer ID from the Civil Aviation Authority.</p>
@@ -189,7 +189,7 @@ Flight Parameters
         <label class="pln-comp-lbl" for="pln-comp-a2coc-chk">
          <p>A2 CoC</p>
         </label>
-        <input type="checkbox" id="pln-comp-a2coc-chk">
+        <input type="checkbox" id="pln-comp-a2coc-chk" class="pln-param-input">
       </div>
       <div  class="pln-comp-desc">
         <p>Ensure that you hold a current A2 Certificate of Competency from a CAA approved training organisation.</p>
@@ -202,7 +202,7 @@ Flight Parameters
         <label class="pln-comp-lbl" for="pln-comp-gvc-chk">
          <p>GVC</p>
         </label>
-        <input type="checkbox" id="pln-comp-gvc-chk">
+        <input type="checkbox" id="pln-comp-gvc-chk" class="pln-param-input">
       </div>
       <div  class="pln-comp-desc">
         <p>Ensure that you hold a current General Visual Line of Sight Certificate or GVC for short.</p>
@@ -219,7 +219,7 @@ Flight Parameters
   <p class="pln-params-p">Select below the category for the drone you intend to fly.  Refer to the CAA if not sure.</p>
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c01" value="option1">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c01" value="option1" class="pln-param-input">
         <label for="pln-dronecat-radio-c01">
           <p>C0 - Toy or no camera</p>
         </label>
@@ -232,7 +232,7 @@ Flight Parameters
     <!-- C0 with camera-->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c02" value="option2">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c02" value="option2" class="pln-param-input">
         <label for="pln-dronecat-radio-c02">
           <p>C0 - Camera</p>
         </label>
@@ -245,7 +245,7 @@ Flight Parameters
     <!-- C1 certified-->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c1" value="option3">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c1" value="option3" class="pln-param-input">
         <label for="pln-dronecat-radio-c1">
         <p>C1 - Certified</p>
         </label>
@@ -258,7 +258,7 @@ Flight Parameters
     <!-- A1 transition-->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4" class="pln-param-input">
         <label for="pln-dronecat-radio-a1t">
           <p>A1 - Transition</p>
         </label>
@@ -271,8 +271,8 @@ Flight Parameters
     <!-- C2 Certified Low Speed-->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
-        <label for="pln-dronecat-radio-a1t">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c2ls" value="option5" class="pln-param-input">
+        <label for="pln-dronecat-radio-c2ls">
           <p>C2 - Low Speed</p>
         </label>
       </div>
@@ -284,21 +284,8 @@ Flight Parameters
     <!-- C2 Certified -->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
-        <label for="pln-dronecat-radio-a1t">
-          <p>C2 - Low Speed</p>
-        </label>
-      </div>
-      <div class="pln-dronecat-desc">
-        <p>A drone that is C2 certified, operating in low speed mode.</p>
-      </div>
-    </div>
-
-    <!-- C2 Certified -->
-    <div class="pln-dronecat">
-      <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
-        <label for="pln-dronecat-radio-a1t">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c2" value="option6"  class="pln-param-input">
+        <label for="pln-dronecat-radio-c2">
           <p>C2</p>
         </label>
       </div>
@@ -310,8 +297,8 @@ Flight Parameters
     <!-- A2 Transition -->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
-        <label for="pln-dronecat-radio-a1t">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a2t" value="option7"  class="pln-param-input">
+        <label for="pln-dronecat-radio-a2t">
           <p>A2 - Transition</p>
         </label>
       </div>
@@ -323,26 +310,26 @@ Flight Parameters
     <!-- C3 -->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
-        <label for="pln-dronecat-radio-a1t">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c3" value="option8" class="pln-param-input">
+        <label for="pln-dronecat-radio-c3">
           <p>C3</p>
         </label>
       </div>
       <div class="pln-dronecat-desc">
-        <p>A drone that is C2 certified, operating in low speed mode.</p>
+        <p>A drone that is over 2kg.</p>
       </div>
     </div>
 
     <!-- C4 -->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4">
-        <label for="pln-dronecat-radio-a1t">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c4" value="option9"  class="pln-param-input">
+        <label for="pln-dronecat-radio-c4">
           <p>C4</p>
         </label>
       </div>
       <div class="pln-dronecat-desc">
-        <p>A drone that is C2 certified, operating in low speed mode.</p>
+        <p>A drone that is over 2kg and has no built-in flight controls.  Typically a model aircraft.</p>
       </div>
     </div>
   </div>
@@ -353,7 +340,7 @@ Flight Parameters
     <p class="pln-params-p">Below are descriptions of the flight categories that you can undertake with the combination of drone and competencies that you have indicated.</p>
     
     <!-- A1 Fly Over Stay Over -->
-    <div class="pln-flightcat">
+    <div id="pln-flightcat-a1-so" class="pln-flightcat">
       <p>A1 Fly Over - Stay Over</p>
       <div class="pln-flightcat-desc">
         <p>No miniumum separation from uninvolved people, potentially flying over, and staying over uninvolved people.</p>
@@ -361,7 +348,7 @@ Flight Parameters
     </div>
 
     <!-- A1 Fly Over Pass Over -->
-    <div class="pln-flightcat">
+    <div id="pln-flightcat-a1-po" class="pln-flightcat">
       <p>A1 Fly Over - Pass Over</p>
       <div class="pln-flightcat-desc">
         <p>No miniumum separation from uninvolved people, potentially flying over, but only passing briefly over uninvolved people.</p>
@@ -369,7 +356,7 @@ Flight Parameters
     </div>
 
     <!-- A2 Close to People - 5m -->
-    <div class="pln-flightcat">
+    <div id="pln-flightcat-a2-5" class="pln-flightcat">
       <p>A2 Close to People - 5m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 5m from uninvolved people.</p>
@@ -377,7 +364,7 @@ Flight Parameters
     </div>
 
     <!-- A2 Close to People - 30m -->
-    <div class="pln-flightcat">
+    <div id="pln-flightcat-a2-30" class="pln-flightcat">
       <p>A2 Close to People - 5m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 30m from uninvolved people.</p>
@@ -385,7 +372,7 @@ Flight Parameters
     </div>
 
     <!-- A2 Close to People - 50m -->
-    <div class="pln-flightcat">
+    <div id="pln-flightcat-a2-50" class="pln-flightcat">
       <p>A2 Close to People - 5m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 50m from uninvolved people.</p>
@@ -393,7 +380,7 @@ Flight Parameters
     </div>
 
     <!-- A3 Far from People - 50m -->
-    <div class="pln-flightcat">
+    <div id="pln-flightcat-a3" class="pln-flightcat">
       <p>A2 Close to People - 5m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 50m from uninvolved people, must remain over 150m from congested areas.</p>
@@ -401,6 +388,7 @@ Flight Parameters
     </div>
     
   </div>
+<div id="pln-param-reset" class="btn btn-primary">Reset</div>
 </section>
 </div>
 <!--  End of FlightParameters menu section-->
@@ -414,6 +402,6 @@ Flight Parameters
 </ul>
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 01/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0095</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 01/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0098</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
