Flight Parameters Using Switch Case
Flight parameters update now using switch case.  Created allFly and noFly routines

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ Flight Parameters
 
     <!-- A2 Close to People - 30m -->
     <div id="pln-flightcat-a2-30" class="pln-flightcat">
-      <p>A2 Close to People - 5m</p>
+      <p>A2 Close to People - 30m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 30m from uninvolved people.</p>
       </div>
@@ -373,7 +373,7 @@ Flight Parameters
 
     <!-- A2 Close to People - 50m -->
     <div id="pln-flightcat-a2-50" class="pln-flightcat">
-      <p>A2 Close to People - 5m</p>
+      <p>A2 Close to People - 50m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 50m from uninvolved people.</p>
       </div>
@@ -381,7 +381,7 @@ Flight Parameters
 
     <!-- A3 Far from People - 50m -->
     <div id="pln-flightcat-a3" class="pln-flightcat">
-      <p>A2 Close to People - 5m</p>
+      <p>A3 Far From People - 5m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 50m from uninvolved people, must remain over 150m from congested areas.</p>
       </div>
@@ -402,6 +402,6 @@ Flight Parameters
 </ul>
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 01/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0098</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 03/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0099</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
