Flight Parameters Business Rules
Business rules for the flight parameters, based on drone categories and competencies, established and tested.

Reset tools still need development.

--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@ Flight Parameters
 
     <!-- A3 Far from People - 50m -->
     <div id="pln-flightcat-a3" class="pln-flightcat">
-      <p>A3 Far From People - 5m</p>
+      <p>A3 Far From People</p>
       <div class="pln-flightcat-desc">
-        <p>Minimum separation of 50m from uninvolved people, must remain over 150m from congested areas.</p>
+        <p>Minimum separation of 50m from uninvolved people AND you must remain over 150m from congested areas.</p>
       </div>
     </div>
     
@@ -402,6 +402,6 @@ Flight Parameters
 </ul>
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 03/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0099</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 04/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0101</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
