--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@ Home Page
 </a>
 </li>
 <li class='nav-item mr-2'>
- <a id='LocationButton' class='hvr-sweep-to-bottom' onclick="showMenuComponent('Location')">
-<span id='LocationSpan' class='menu_span'>
-Location
+ <a id='FlightParametersButton' class='hvr-sweep-to-bottom' onclick="showMenuComponent('FlightParameters')">
+<span id='FlightParametersSpan' class='menu_span'>
+Flight Parameters
 </span>
 </a>
 </li>
 <li class='nav-item mr-2'>
- <a id='FlightParametersButton' class='hvr-sweep-to-bottom' onclick="showMenuComponent('FlightParameters')">
-<span id='FlightParametersSpan' class='menu_span'>
-Flight Parameters
+ <a id='LocationButton' class='hvr-sweep-to-bottom' onclick="showMenuComponent('Location')">
+<span id='LocationSpan' class='menu_span'>
+Location
 </span>
 </a>
 </li>
@@ -66,8 +66,9 @@ Flight Parameters
 <section id='pln-welcome' class='pln-cta'>
 
  <div class='row'>
-   <div id='pln-cta' class='col-8'>
-     <p>Drones, UAVs (unmanned aerial vehicles) and traditional model aircraft are all becoming increasingly popular - this site will help you to plan safe and enjoyable flights.</p>
+   <div id='pln-cta' class='col-10'>
+     <p>Drones, UAVs (unmanned aerial vehicles) and traditional model aircraft are all becoming increasingly popular - this site will help you to plan safe and enjoyable flights.<br>
+     We will look first at you and your drone, we will then consider the location you plan to fly to see it is safe and legal.</p>
      <div class="row">
       <div id="pln-cta-primary" class='btn btn-primary col-8'>Get Started</div>
     </div>
@@ -86,51 +87,6 @@ Flight Parameters
 </section>
 </div>
 <!--  End of HomePage menu section-->
-
-
-<!--  Start of Location menu section-->
-<div style='display: none;' class='MenuComponent' id='Location'>
-<a id='Location-Top'></a>
-<section>
-<div class="row">
- <div id="pln-geo" class="col-2">
-    <h1 class="pln-h1">Location Details</h1>
-
-    <!-- Following form dervied from Bootstrap https://getbootstrap.com/docs/4.1/components/forms/ !-->
-    <form>
-      <div class="form-group">
-        <label for="pln-Postcode">Postcode</label>
-        <input type="text" class="form-control" id="pln-Postcode" aria-describedby="UK Postcode" placeholder="Enter postcode">
-      </div>
-      <div class="form-group">
-        <label for="pln-Latitude">Latitude</label>
-        <input type="number" class="form-control" id="pln-Latitude" name="plnLat" placeholder="Decimal Latitude">
-        <label for="pln-Longitude">Longitude</label>
-        <input type="number" class="form-control" id="pln-Longitude" name="plnLong" placeholder="Decimal Longitdue">
-        <small id="latlongHelp" class="form-text text-muted">You may wish to further localise the latitude and longitude</small>
-      </div>
-      
-      <div class="btn btn-primary" id="pln-Recenter">Re-Centre Maps</div>
-    </form>
-<div class="pln-Attribution">
-        <p>Contains OS data © Crown copyright and database right 2021</p>
-        <p>Contains Royal Mail data © Royal Mail copyright and database right 2021</p>
-        <p>Source: Office for National Statistics licensed under the Open Government Licence v.3.0</p>
-      </div>
- </div>
- <div id="pln-osmap" class="col-5">
-   <p>OS Map</p>
- </div>
- <div  id="pln-satview" class="col-5">
-   <p>Satellite View</p>
- </div>
-</div>
-<div class="row">
- <div class="btn btn-primary" onclick="droneSafetyMap(51.477976,0.000001);">Drone Safety Map</div>
-</div>
-</section>
-</div>
-<!--  End of Location menu section-->
 
 
 <!--  Start of FlightParameters menu section-->
@@ -393,15 +349,55 @@ Flight Parameters
 </div>
 <!--  End of FlightParameters menu section-->
 
+
+<!--  Start of Location menu section-->
+<div style='display: none;' class='MenuComponent' id='Location'>
+<a id='Location-Top'></a>
+<section>
+<div class="row">
+ <div id="pln-geo" class="col-2">
+    <h1 class="pln-h1">Location Details</h1>
+
+    <!-- Following form dervied from Bootstrap https://getbootstrap.com/docs/4.1/components/forms/ !-->
+    <form>
+      <div class="form-group">
+        <label for="pln-Postcode">Postcode</label>
+        <input type="text" class="form-control" id="pln-Postcode" aria-describedby="UK Postcode" placeholder="Enter postcode">
+      </div>
+      <div class="form-group">
+        <label for="pln-Latitude">Latitude</label>
+        <input type="number" class="form-control" id="pln-Latitude" name="plnLat" placeholder="Decimal Latitude">
+        <label for="pln-Longitude">Longitude</label>
+        <input type="number" class="form-control" id="pln-Longitude" name="plnLong" placeholder="Decimal Longitdue">
+        <small id="latlongHelp" class="form-text text-muted">You may wish to further localise the latitude and longitude</small>
+      </div>
+      
+      <div class="btn btn-primary" id="pln-Recenter">Re-Centre Maps</div>
+    </form>
+<div class="pln-Attribution">
+        <p>Contains OS data © Crown copyright and database right 2021</p>
+        <p>Contains Royal Mail data © Royal Mail copyright and database right 2021</p>
+        <p>Source: Office for National Statistics licensed under the Open Government Licence v.3.0</p>
+      </div>
+ </div>
+ <div id="pln-osmap" class="col-5">
+   <p>OS Map</p>
+ </div>
+ <div  id="pln-satview" class="col-5">
+   <p>Satellite View</p>
+ </div>
+</div>
+<div class="row">
+ <div class="btn btn-primary" onclick="droneSafetyMap(51.477976,0.000001);">Drone Safety Map</div>
+</div>
+</section>
+</div>
+<!--  End of Location menu section-->
+
 <footer>
-<ul class="social-networks" aria-label="Social Media">
-<li><a aria-label="Facebook" href="http://www.facebook.com/warksar" target="_blank" aria-label="Facebook"><i class="fab fa-facebook" ></i></a></li>
-<li><a href="https://twitter.com/WarkSAR" target="_blank"   aria-label="Twitter"><i class="fab fa-twitter-square"></i></a></li>
-<li><a href="http://www.youtube.com" target="_blank"  aria-label="YouTube"><i class="fab fa-youtube-square"></i></a></li>
-<li><a href="http://www.instagram.com" target="_blank"  aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-</ul>
+<!-- Placeholder for Footer Links -->
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 05/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0102</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 05/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0104</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
