--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Location
 <div style='display: none;' class='MenuComponent' id='FlightParameters'>
 <a id='FlightParameters-Top'></a>
 <section>
-<!-- Guidance Bar taking the user through the steps to plan the flight -->
+<!-- Guidance Bar taking the user through the steps to plan the flight, covering Steps One and Two and the results, which carry over to the Location Page -->
 <div class="row pln-steps">
     <!-- Step One-->
     <div class='col-4'>
@@ -102,11 +102,18 @@ Location
     </div>
     <!-- Step Two-->
     <div class='col-4'>
-        <p id="pln-step-two" class="pln-param-instruct"><span class="pln-step">Step Two</span>Selec the drone category. Refer to the CAA <a href='https://publicapps.caa.co.uk/modalapplication.aspx?appid=11&mode=detail&id=415'>CAP 722</a> for guidance.</p>
+        <p id="pln-step-two" class="pln-param-instruct"><span class="pln-step">Step Two</span>Selec the drone category.
+            Refer to the CAA <a
+                href='https://publicapps.caa.co.uk/modalapplication.aspx?appid=11&mode=detail&id=415'>CAP 722</a> for
+            guidance.</p>
     </div>
     <!-- Results from Step One and Step Two-->
-    <div class='col-4'>
-        <p id="pln-result-a" class="pln-param-instruct"><span class="pln-step">Results</span>The permissible flight categories are shown, in <font class="pln-flight-yes">Green</font>, non-permissible flights are <font class="pln-flight-no">Crossed out in Red</font>.</p>
+    <div class='col-3'>
+        <p id="pln-result-a" class="pln-param-instruct">Permitted flight categories in <span class="pln-flight-yes">Green</span>, others <span class="pln-flight-no">Crossed out in Red</span>.
+        </p>
+    </div>
+    <div class="col-1">
+        <div id="pln-next-location" class="btn btn-primary">Next</div>
     </div>
 </div>
 <div class="row">
@@ -377,6 +384,26 @@ Location
 <div style='display: none;' class='MenuComponent' id='Location'>
 <a id='Location-Top'></a>
 <section>
+<!-- Guidance Bar taking the user through the steps to plan the flight -->
+<div class="row pln-steps">
+    <!-- Step Three-->
+    <div class='col-4'>
+        <p id="pln-step-one" class="pln-param-instruct"><span class="pln-step">Step Three</span>Select your competencies,
+            skills and certifications.</p>
+    </div>
+    <!-- Step Four-->
+    <div class='col-4'>
+        <p id="pln-step-two" class="pln-param-instruct"><span class="pln-step">Step Four</span>Selec the drone category. Refer to the CAA <a href='https://publicapps.caa.co.uk/modalapplication.aspx?appid=11&mode=detail&id=415'>CAP 722</a> for guidance.</p>
+    </div>
+    <!-- Step Five-->
+    <div class='col-4'>
+        <p id="pln-result-a" class="pln-param-instruct"><span class="pln-step">Step Five</span>The permissible flight categories are shown, in <font class="pln-flight-yes">Green</font>, non-permissible flights are <font class="pln-flight-no">Crossed out in Red</font>.<div class="btn btn-primary" onclick="droneSafetyMap(51.477976,0.000001);" class="col-12">Drone Safety Map</div></p>
+    </div>
+</div>
+<div class="row">
+ 
+<div id="pln-flsummary"><p>You may wish to return to the <a id="pln-param-rtn">Flight Parameters</a> page to determine your flight category.</p></div>
+</div>
 <div class="row">
   
   <div id="pln-geo" class="col-2">
@@ -385,7 +412,7 @@ Location
       <!-- Following form dervied from Bootstrap https://getbootstrap.com/docs/4.1/components/forms/ !-->
       <form>
         <div class="form-group">
-          <label for="pln-Postcode">Postcode</label>
+          <label for="pln-Postcode">Postcode (enter when complete)</label>
           <input type="text" class="form-control" id="pln-Postcode" aria-describedby="UK Postcode" placeholder="Enter postcode">
         </div>
         <div class="form-group">
@@ -400,53 +427,27 @@ Location
       </form>
     </div>
 
- <div class="col-5">
-   <div id="pln-osmap">
+
+   <div id="pln-osmap"  class="col-5">
     <p>OS Map</p>
    </div>
-   <div class="pln-param-instruct">
-    <p class="pln-params-p">
-      <span class="pln-step">Step Three</span>
-      Check the drone safety map, to ensure that your flight is in an area where it is OK to fly and review any hazards shown.
-    </p>
-   </div>
- </div>
+  
+
 
   
-<div class="col-5">
- <div  id="pln-satview">
+
+ <div  id="pln-satview"  class="col-5">
    <p>Satellite View</p>
  </div>
+
+
 </div>
-
-</div>
-
-
 <div class="row">
- 
-<div id="pln-flsummary"><p>You should be flying in the open category A2, so you must maintain a minimum horizontal separation of 50m from uninvolved people.</p></div>
-</div>
+<div class="col-4">Contains OS data © Crown copyright and database right 2021</div>
 
-<div class="row">
-<div class="pln-param-instruct" class="col-5">
-  <p class="pln-params-p"><span class="pln-step">Step Three</span>Check the ordnance survey and satellite maps, we recommend you also look at the Street View for your location if it is available.</p>
-</div>
+<div class="col-4">Contains Royal Mail data © Royal Mail copyright and database right 2021</div>
 
-<div class="pln-param-instruct" class="col-5">
-  <p class="pln-params-p"><span class="pln-step">Step Four</span>Select the menu at the top left of the drone safety map and subnmit your flight report.  We wish you a safe and enjoyable flight.</p>
-</div>
-</div>
-
-<div class="row">
- <div class="btn btn-primary" onclick="droneSafetyMap(51.477976,0.000001);" class="col-12">Drone Safety Map</div>
-</div>
-
-<div class="row">
-<div class="pln-Attribution">
-  <p>Contains OS data Â© Crown copyright and database right 2021</p>
-  <p>Contains Royal Mail data Â© Royal Mail copyright and database right 2021</p>
-  <p>Source: Office for National Statistics licensed under the Open Government Licence v.3.0</p>
-</div>
+<div class="col-4">Source: Office for National Statistics licensed under the Open Government Licence v.3.0</div>
 </div>
 </section>
 </div>
@@ -456,6 +457,6 @@ Location
 <!-- Placeholder for Footer Links -->
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 08/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0153</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 08/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0173</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
